<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayoutVertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Card for Call Functionality -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="#D1E8E2"
                app:strokeColor="#A5D8D0"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/welcomeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/call_center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textCall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:text="@string/realizar_llamadas"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/phoneNumberEditText"
                        android:layout_width="294dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/favor_ingrese_el_n_mero_de_tel_fono"
                        android:inputType="phone"
                        android:labelFor="@+id/textCall"
                        android:minHeight="48dp" />

                    <Button
                        android:id="@+id/btnCall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"
                        android:backgroundTint="#80CBC4"
                        android:drawableLeft="@drawable/ic_telephone24"
                        android:text="@string/llamar" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Card for Web Page Input -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="#FDEBD0"
                app:strokeColor="#F9C784"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/textPageWeb"
                        android:layout_width="347dp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_height="wrap_content"
                        android:text="@string/abrir_sitio_web" />

                    <EditText
                        android:id="@+id/urlEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:hint="@string/ingresar_la_url"
                        android:textAlignment="center"
                        tools:ignore="TextFields" />

                    <Button
                        android:id="@+id/openWebButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:backgroundTint="#FFAB91"
                        android:drawableLeft="@drawable/ic_network"
                        android:text="@string/busqueda"
                        android:textColor="@color/white" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Card for Sending Email -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="#D1E8E2"
                app:strokeColor="#A5D8D0"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <Button
                        android:id="@+id/btn_send_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="#80CBC4"
                        android:drawableLeft="@drawable/ic_mail"
                        android:text="@string/enviar_un_correo" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Card for Sharing Image -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="#FDEBD0"
                app:strokeColor="#F9C784"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:contentDescription="TODO"
                        android:src="@drawable/ic_pizza" />

                    <Button
                        android:id="@+id/btnShareImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:backgroundTint="#FFAB91"
                        android:drawableLeft="@drawable/ic_share"
                        android:text="@string/compartir_imagen" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Card for Getting Location -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#D1E8E2"
                app:strokeColor="#A5D8D0"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <Button
                        android:id="@+id/btnGetLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:backgroundTint="#80CBC4"
                        android:drawableLeft="@drawable/ic_maps"
                        android:text="@string/obtener_su_ubicaci_n" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <!-- Card for Sending Email -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="#FDEBD0"
                app:strokeColor="#F9C784"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <Button
                        android:id="@+id/btnOpenSettings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:backgroundTint="#FFAB91"
                        android:drawableLeft="@drawable/ic_mechanical"
                        android:text="@string/configuraciones" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Card for Sending Email -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="#D1E8E2"
                app:strokeColor="#A5D8D0"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="16dp"
                        tools:ignore="UselessParent">

                        <EditText
                            android:id="@+id/etYouTubeId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:hint="@string/ingrese_el_id_del_video_de_youtube"
                            android:inputType="text"
                            android:minHeight="48dp" />

                        <Button
                            android:id="@+id/btnPlayYouTube"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#80CBC4"
                            android:drawableLeft="@drawable/ic_youtube"
                            android:text="@string/redirigir" />

                    </LinearLayout>


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
