<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Card for Opening Second Activity -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="6dp"
                android:backgroundTint="#D1E8E2"
                app:strokeColor="#A5D8D0"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:padding="16dp">

                    <TextView
                        android:id="@+id/intentText"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#37474F"
                        android:text="@string/bienvenido"
                        android:textSize="18sp"
                        android:layout_marginBottom="8dp"/>

                    <Button
                        android:id="@+id/buttonOpenSecondActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:backgroundTint="#80CBC4"
                        android:drawableLeft="@drawable/ic_menu"
                        android:text="@string/men_de_actividades"
                        android:textColor="#FFFFFF" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Card for Sharing Message -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                app:cardElevation="6dp"
                android:backgroundTint="#FDEBD0"
                app:strokeColor="#F9C784"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/textViewMessage"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:textColor="#37474F"
                        android:text="@string/compartir_un_mensaje"
                        android:textSize="18sp"
                        android:layout_marginBottom="8dp" />

                    <Button
                        android:id="@+id/buttonShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="#FFAB91"
                        android:drawableLeft="@drawable/ic_share"
                        android:text="@string/compartir"
                        android:textColor="#FFFFFF" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
